--- a/TestDocR_001.Rmd
+++ b/TestDocR_001.Rmd
@@ -9,7 +9,8 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-THIS IS KARAN JOSEPH HERE
+THIS IS KARAN JOSEPH HERE  
+Version 2.0
 
 ## R Markdown
 
